--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
         <nav>
             <a href="index.html">Home</a>
-            <a href="...">Job Experience</a>
+            <a href="experience.html">Job Experience</a>
             <a href="...">Skills</a>
         </nav>
     </header>
@@ -38,9 +38,9 @@
         </div>
     </main>
     <footer>
-        <p>2024 - Caleb Wolfe</p>
-        <p><a href="...">Job Experience</a></p>
-        <p><a href="...">Relevant Information</a></p>
+        <p>Caleb Wolfe</p>
+        <p>camawolfe52@icloud.com</p>
+        <p>(909)641-6893</p>
     
         <div class="social">
             <a href="https://facebook.com" target="_blank">
