--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div id="casual-box">
             <img src="caleb-mary3.jpg" alt="Picture of Me and My Girlfriend.">
-            <p>I am from Fontana, California. Have a wonderful family and have had many experience throughout my life teaching me to work hard and follow through. I have 5 younger siblings and a beautiful girfriend. I am also half white and half filipino. Please take your time to review my qualifications. I believe I can be an asset to your team.</p>
+            <p>I am from Fontana, California. I have a wonderful family and have had many experience throughout my life teaching me to work hard and follow through. I have 5 younger siblings and a beautiful girfriend. I am also half white and half filipino. Please take your time to review my qualifications. I believe I can be an asset to your team.</p>
         </div>
     </main>
     <footer>
@@ -46,8 +46,8 @@
             <a href="https://facebook.com" target="_blank">
                 <img src="images/facebook.png" alt="fb icon">
             </a>
-            <a href="https://twitter.com" target="_blank">
-                <img src="images/twitter.png" alt="twitter icon">
+            <a href="..." target="_blank">
+                <img src="..." alt="LinkedIn Icon">
             </a>
             <a href="https://instagram.com" target="_blank">
                 <img src="images/instagram.png" alt="instagram icon">
