--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="experience.html">Job Experience</a>
-            <a href="...">Skills</a>
+            <a href="skills.html">Skills</a>
         </nav>
     </header>
     <main id="home-main">
         <section id="cloud-para">
-            <h1>Cloud Computing</h1>
-            <ul>
+            <h1 class="intext-title">Cloud Computing</h1>
+            <ul class="intext">
                 <li>Bachelor of Cloud Computing</li>
                 <li>Certificate: Cloud Computing</li>
                 <li>Certificate: Computer Programming</li>
@@ -29,12 +29,12 @@
             </ul>
         </section>
         <div id="intro-box">
-            <p>My name is Caleb Wolfe. I have recently graduated from Brigham Young University-Idaho studying Cloud Computing with a emphasis in Web Developement and Programming. I am highly skilled with cloud tools and have skills in [list of programming languages here when I am proficient in them] and I have experience in Front and Back End Web Development.</p>
+            <p class="intext">My name is Caleb Wolfe. I have recently graduated from Brigham Young University-Idaho studying Cloud Computing with a emphasis in Web Developement and Programming. I am highly skilled with cloud tools and have skills in [list of programming languages here when I am proficient in them] and I have experience in Front and Back End Web Development.</p>
             <img src="caleb-single.jpg" alt="Picture of Me.">
         </div>
         <div id="casual-box">
             <img src="caleb-mary3.jpg" alt="Picture of Me and My Girlfriend.">
-            <p>I am from Fontana, California. I have a wonderful family and have had many experience throughout my life teaching me to work hard and follow through. I have 5 younger siblings and a beautiful girfriend. I am also half white and half filipino. Please take your time to review my qualifications. I believe I can be an asset to your team.</p>
+            <p class="intext">I am from Fontana, California. I have a wonderful family and have had many experience throughout my life teaching me to work hard and follow through. I have 5 younger siblings and a beautiful girfriend. I am also half white and half filipino. Please take your time to review my qualifications. I believe I can be an asset to your team.</p>
         </div>
     </main>
     <footer>
