--- a/experience.html
+++ b/experience.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="...">
-    <title>Caleb Wolfe | Home</title>
+    <title>Caleb Wolfe | Job Experience</title>
 </head>
 <body>
     <header>
@@ -15,7 +15,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="experience.html">Job Experience</a>
-            <a href="...">Skills</a>
+            <a href="skills.html">Skills</a>
         </nav>
     </header>
     <main id="experience">
