--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a id="cw-link" href="index.html">
-            <img src="logo-resume.png" alt="CW"> 
+            <img id="logo" src="logo-resume.png" alt="CW"> 
         </a>
     
         <nav>
@@ -30,10 +30,10 @@
         </section>
         <div id="intro-box">
             <p class="intext">My name is Caleb Wolfe. I have recently graduated from Brigham Young University-Idaho studying Cloud Computing with a emphasis in Web Developement and Programming. I am highly skilled with cloud tools and have skills in [list of programming languages here when I am proficient in them] and I have experience in Front and Back End Web Development.</p>
-            <img src="caleb-single.jpg" alt="Picture of Me.">
+            <img id="selfie" src="caleb-single.jpg" alt="Picture of Me.">
         </div>
         <div id="casual-box">
-            <img src="caleb-mary3.jpg" alt="Picture of Me and My Girlfriend.">
+            <img id="c-m-3" src="caleb-mary3.jpg" alt="Picture of Me and My Girlfriend.">
             <p class="intext">I am from Fontana, California. I have a wonderful family and have had many experience throughout my life teaching me to work hard and follow through. I have 5 younger siblings and a beautiful girfriend. I am also half white and half filipino. Please take your time to review my qualifications. I believe I can be an asset to your team.</p>
         </div>
     </main>
