--- a/experience.html
+++ b/experience.html
@@ -51,13 +51,13 @@
     
         <div class="social">
             <a href="https://facebook.com" target="_blank">
-                <img src="images/facebook.png" alt="fb icon">
+                <img src="facebook.png" alt="fb icon">
             </a>
             <a href="..." target="_blank">
                 <img src="..." alt="LinkedIn Icon">
             </a>
             <a href="https://instagram.com" target="_blank">
-                <img src="images/instagram.png" alt="instagram icon">
+                <img src="instagram.png" alt="instagram icon">
             </a>
         </div>
     </footer>
