--- a/experience.html
+++ b/experience.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles-resume.css">
     <title>Caleb Wolfe | Job Experience</title>
     <script>
-        var acc = document.getElementsByClassName("accordion");
+        var acc = accordion;
         var i;
         
         for (i = 0; i < acc.length; i++) {
