--- a/experience.html
+++ b/experience.html
@@ -46,7 +46,7 @@
             <img src="caleb-mary1.jpg" alt="Caleb & Mary">
             <img src="byui-bsc.jpg" alt="BYU-I">
             <img src="pizza-resume.jpg" alt="Pizza Image">
-            <img src="caleb-mary2.jpg" alt="Caleb & Mary">
+            <img id="small" src="caleb-mary2.jpg" alt="Caleb & Mary">
           </div>
     </main>
     <footer>
