--- a/experience.html
+++ b/experience.html
@@ -43,10 +43,10 @@
         </div>
 
         <div class="scroll-container">
-            <img src="caleb-mary1.jpg" alt="Caleb & Mary">
+            <img class="small" src="caleb-mary1.jpg" alt="Caleb & Mary">
             <img src="byui-bsc.jpg" alt="BYU-I">
             <img src="pizza-resume.jpg" alt="Pizza Image">
-            <img id="small" src="caleb-mary2.jpg" alt="Caleb & Mary">
+            <img class="small" src="caleb-mary2.jpg" alt="Caleb & Mary">
           </div>
     </main>
     <footer>
