--- a/skills.html
+++ b/skills.html
@@ -30,7 +30,7 @@
               <div id="hard-skill">
                 <img src="cloud-comp.jpg" alt="Cloud Computing Stock Image">
                 <h1 class="intext-title">Technical Skills</h1>
-                <ul>
+                <ul class="intext">
                     <li>Python</li>
                     <li>HTML & CSS</li>
                     <li>C#</li>
