--- a/skills.html
+++ b/skills.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="...">
-        <title>Caleb Wolfe | Job Experience</title>
+        <link rel="stylesheet" href="styles-resume.css">
+        <title>Caleb Wolfe | Skills</title>
     </head>
     <body>
         <header>
