--- a/skills.html
+++ b/skills.html
@@ -19,16 +19,17 @@
             </nav>
         </header>
         <main>
-            <div class="dropdown">
-                <button class="dropbtn">Dropdown</button>
+
+              <div class="dropdown">
+                <span class="intext-title">Projects</span>
                 <div class="dropdown-content">
-                  <a href="https://caleb-wo.github.io/WDD-130/">Dry Oar White Water Rafter Website</a>
-                  <a href="https://caleb-wo.github.io/WDD-130/">More to come...</a>
+                    <a class="intext" href="https://caleb-wo.github.io/WDD-130/">Dry Oar White Water Rafter Website</a>
+                    <a class="intext" href="https://caleb-wo.github.io/WDD-130/">More to come...</a>
                 </div>
               </div>
 
               <div id="hard-skill">
-                <img src="cloud-comp.jpg" alt="Cloud Computing Stock Image">
+                <img class="small" src="cloud-comp.jpg" alt="Cloud Computing Stock Image">
                 <h1 class="intext-title">Technical Skills</h1>
                 <ul class="intext">
                     <li>Python</li>
@@ -40,7 +41,7 @@
               </div>
 
               <div id="soft-skill">
-                <img src="caleb-fam.jpg" alt="Picture of My Family">
+                <img class="small" src="caleb-fam.jpg" alt="Picture of My Family">
                 <h1 class="intext-title">Soft Skills</h1>
                 <p class="intext">I work well and communicate with others. I have always enjoyed spending time to get to know others. In many different social environments, I successfully establish good relationships. As a result of my prior job experience, I am familiar with interacting with customers and individuals while representing my superiors. When I was on my religious mission and in prior job experiences, I have been called to lead others. I have led roughly 30 individuals at a time. I am good at inspiring others to be better and focusing a group to reach a specific goal or result.</p>
               </div>
