--- a/skills.html
+++ b/skills.html
@@ -44,7 +44,7 @@
 
               <div id="soft-skill">
                 <img class="small" src="caleb-fam.jpg" alt="Picture of My Family">
-                <div id="soft-info"></div>
+                <div id="soft-info">
                     <h1 class="intext-title">Soft Skills</h1>
                     <p class="intext">I work well and communicate with others. I have always enjoyed spending time to get to know others. In many different social environments, I successfully establish good relationships. As a result of my prior job experience, I am familiar with interacting with customers and individuals while representing my superiors. When I was on my religious mission and in prior job experiences, I have been called to lead others. I have led roughly 30 individuals at a time. I am good at inspiring others to be better and focusing a group to reach a specific goal or result.</p>
                  </div>
