--- a/skills.html
+++ b/skills.html
@@ -29,7 +29,7 @@
               </div>
 
               <div id="hard-skill">
-                <img class="small" src="cloud-comp.jpg" alt="Cloud Computing Stock Image">
+                <img class="s-small" src="cloud-comp.jpg" alt="Cloud Computing Stock Image">
                 <div id="hard-info">
                     <h1 class="intext-title">Technical Skills</h1>
                     <ul class="intext">
@@ -43,7 +43,7 @@
               </div>
 
               <div id="soft-skill">
-                <img class="small" src="caleb-fam.jpg" alt="Picture of My Family">
+                <img class="s-small" src="caleb-fam.jpg" alt="Picture of My Family">
                 <div id="soft-info">
                     <h1 class="intext-title">Soft Skills</h1>
                     <p class="intext">I work well and communicate with others. I have always enjoyed spending time to get to know others. In many different social environments, I successfully establish good relationships. As a result of my prior job experience, I am familiar with interacting with customers and individuals while representing my superiors. When I was on my religious mission and in prior job experiences, I have been called to lead others. I have led roughly 30 individuals at a time. I am good at inspiring others to be better and focusing a group to reach a specific goal or result.</p>
@@ -61,8 +61,8 @@
                 <a href="https://facebook.com" target="_blank">
                     <img src="facebook.png" alt="fb icon">
                 </a>
-                <a href="..." target="_blank">
-                    <img src="..." alt="LinkedIn Icon">
+                <a href="https://www.linkedin.com" target="_blank">
+                    <img src="linkedin.jpg" alt="LinkedIn Icon">
                 </a>
                 <a href="https://instagram.com" target="_blank">
                     <img src="instagram.png" alt="instagram icon">
