--- a/experience.html
+++ b/experience.html
@@ -54,8 +54,8 @@
             <a href="https://facebook.com" target="_blank">
                 <img src="facebook.png" alt="fb icon">
             </a>
-            <a href="..." target="_blank">
-                <img src="..." alt="LinkedIn Icon">
+            <a href="https://www.linkedin.com" target="_blank">
+                <img src="linkedin.jpg" alt="LinkedIn Icon">
             </a>
             <a href="https://instagram.com" target="_blank">
                 <img src="instagram.png" alt="instagram icon">
