--- a/skills.html
+++ b/skills.html
@@ -15,7 +15,7 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="experience.html">Job Experience</a>
-                <a href="...">Skills</a>
+                <a href="skills.html">Skills</a>
             </nav>
         </header>
         <main>
