--- a/experience.html
+++ b/experience.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a id="cw-link" href="index.html">
-            <img src="logo-resume.png" alt="CW"> 
+            <img id="logo" src="logo-resume.png" alt="CW"> 
         </a>
     
         <nav>
