--- a/skills.html
+++ b/skills.html
@@ -9,8 +9,8 @@
     <body>
         <header>
             <a id="cw-link" href="index.html">
-                <img src="logo-resume.png" alt="CW"> 
-            </a>
+            <img id="logo" src="logo-resume.png" alt="CW"> 
+        </a>
         
             <nav>
                 <a href="index.html">Home</a>
