--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <header>
-        <a id="cw-link" href="index.html">
-            <img id="logo" src="logo-resume.png" alt="CW"> 
-        </a>
+        <div id="logo-container">
+            <a id="cw-link" href="index.html">
+                <img id="logo" src="logo-resume.png" alt="CW"> 
+            </a>
+        </div>
         <nav>
             <a href="index.html">Home</a>
             <a href="experience.html">Job Experience</a>
